--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "@types/spotify-api": "^0.0.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
+    "pg": "^8.5.1",
     "puppeteer": "^5.5.0",
     "puppeteer-extra": "^3.1.15",
-    "puppeteer-extra-plugin-stealth": "^2.6.5"
+    "puppeteer-extra-plugin-stealth": "^2.6.5",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.9",
     "@types/node-fetch": "^2.5.7",
     "jest": "^26.6.3",
