--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/spotify-api": "^0.0.5",
+    "aws-sdk": "^2.844.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
@@ -22,12 +23,14 @@
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.5",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.9",
     "@types/node-fetch": "^2.5.7",
+    "@types/request": "^2.48.5",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
