--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^2.0.3",
     "@types/spotify-api": "^0.0.5",
     "aws-sdk": "^2.844.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "puppeteer": "^5.5.0",
