--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -1,3 +1,11 @@
+files:
+  "/tmp/.npmrc":
+    mode: "000777"
+    owner: root
+    group: root
+    content: |
+      unsafe-perm=true
+
 packages:
   yum:
     cups-libs: []
