--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -3,7 +3,7 @@ files:
     mode: "000777"
     owner: root
     group: root
-    content: unsafe-perms=true
+    content: unsafe-perm=true
 
 packages:
   yum:
