chromium folder root

--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -1,5 +1,5 @@
 files:
-  "/tmp/.npmrc":
+  "/var/app/staging/node_modules/puppeteer/.local-chromium":
     mode: "000777"
     owner: root
     group: root
