--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -1,10 +1,3 @@
-files:
-  "/var/app/staging/node_modules/puppeteer/.local-chromium":
-    mode: "000777"
-    owner: root
-    group: root
-    content: unsafe-perm=true
-
 packages:
   yum:
     cups-libs: []
@@ -30,7 +23,7 @@ commands:
   libxkbcommon:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libxkbcommon-0.3.1-1.fc20.x86_64.rpm
   libwayland-client:
-    command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libwayland-client-1.2.0-3.fc20.x86_64.rpm
+    command: yum install libwayland-client-1.15.0-1.el7.x86_64.rpm -y
   libwayland-cursor:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libwayland-cursor-1.2.0-3.fc20.x86_64.rpm
   gtk3:
