--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -22,6 +22,8 @@ commands:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libXScrnSaver-1.2.2-6.fc20.x86_64.rpm
   libxkbcommon:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libxkbcommon-0.3.1-1.fc20.x86_64.rpm
+  libwayland-client:
+    command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libwayland-client-1.2.0-3.fc20.x86_64.rpm
   libwayland-cursor:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://dl.fedoraproject.org/pub/archive/fedora/linux/releases/20/Fedora/x86_64/os/Packages/l/libwayland-cursor-1.2.0-3.fc20.x86_64.rpm
   gtk3:
