--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node bin/index.js",
     "watch": "nodemon",
     "build": "rimraf ./bin && tsc",
-    "start:prod": "npm run build && node bin/index.js"
+    "start:prod": "npm run build && node build/index.js"
   },
   "author": "",
   "license": "ISC",
