--- a/.ebextensions/build-source.config
+++ b/.ebextensions/build-source.config
@@ -1,3 +1,6 @@
+# source_compile.config
 container_commands:
   compile:
-    command: npm run build
+    command: "./node_modules/.bin/tsc -p tsconfig.json"
+    env:
+      PATH: /opt/elasticbeanstalk/node-install/node-v10.15.3-linux-x64/bin/
