--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node bin/index.js",
     "watch": "nodemon",
-    "build": "rimraf ./bin && tsc",
+    "build": "tsc",
     "start:prod": "npm run build && node build/index.js"
   },
   "author": "",
