--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,8 +1,21 @@
 version: 0.1
 phases:
+  install:
+    runtime-versions:
+      nodejs: 12
+    commands:
+      - npm install -g typescript
+  pre-build:
+    commands:
+      - echo Installing source NPM dependencies...
+      - npm install
   build:
     commands:
-      - npm install
+      - echo Build started on `date`
+      - npm run build
+  post_build:
+    commands:
+      - echo Build completed on `date`
 
 artifacts:
   files:
