--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node bin/index.js",
     "watch": "nodemon",
-    "build": "tsc",
+    "build": "rimraf ./bin && tsc",
     "start:prod": "npm run build && node build/index.js"
   },
   "author": "",
@@ -27,8 +27,7 @@
     "puppeteer-extra-plugin-stealth": "^2.6.5",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
-    "typeorm": "^0.2.30",
-    "typescript": "^4.1.2"
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -37,6 +36,7 @@
     "@types/request": "^2.48.5",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   }
 }
