--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
   pre_build:
     commands:
       - echo Installing source NPM dependencies...
-      - apt-get install chromium-browser
+      - yum install chromium-browser
       - npm install
   build:
     commands:
