--- a/.ebextensions/build-source.config
+++ b/.ebextensions/build-source.config
@@ -1,5 +1,11 @@
 # source_compile.config
 container_commands:
+
+   logging:
+       command: pwd
+    logging_2:
+       command: ls
+
   compile:
     command: "./node_modules/.bin/tsc -p tsconfig.json"
     env:
