--- a/.ebextensions/build-source.config
+++ b/.ebextensions/build-source.config
@@ -5,6 +5,6 @@ container_commands:
   logging_2:
     command: ls
   compile:
-    command: "./node_modules/.bin/tsc -p tsconfig.json"
+    command: "./node_modules/.bin/tsc -p ./tsconfig.json"
     env:
       PATH: /opt/elasticbeanstalk/node-install/node-v10.15.3-linux-x64/bin/
