--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "typeorm": "^0.2.30",
-    "typescript": "^4.1.2"
-  },
-  "devDependencies": {
+    "typescript": "^4.1.2",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.9",
     "@types/node-fetch": "^2.5.7",
-    "@types/request": "^2.48.5",
+    "@types/request": "^2.48.5"
+  },
+  "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
