--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.9",
     "@types/node-cron": "^2.0.3",
-    "@types/node-fetch": "^2.5.7",
-    "@types/request": "^2.48.5",
     "@types/spotify-api": "^0.0.5",
     "aws-sdk": "^2.844.0",
     "dotenv": "^8.2.0",
@@ -32,11 +28,16 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "typeorm": "^0.2.30",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.9",
+    "@types/node-fetch": "^2.5.7",
+    "@types/request": "^2.48.5"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
+
   }
 }
