--- a/.ebextensions/chromiumpackages.config
+++ b/.ebextensions/chromiumpackages.config
@@ -14,6 +14,8 @@ packages:
     alsa-lib-devel: []
 
 commands:
+  chrome: 
+    command: curl https://intoli.com/install-google-chrome.sh | bash
   atk:
     command: rpm -ivh --nodeps --replacepkgs --replacefiles http://mirror.centos.org/centos/7/os/x86_64/Packages/atk-2.28.1-2.el7.x86_64.rpm
   at-spi2-atk:
