--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.9",
     "@types/node-cron": "^2.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/request": "^2.48.5",
     "@types/spotify-api": "^0.0.5",
-    "@types/cors": "^2.8.10",
     "aws-sdk": "^2.844.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -28,6 +28,7 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
+    "pg-protocol": "^1.4.0",
     "puppeteer": "^5.5.0",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.5",
@@ -37,7 +38,6 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
-
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0"
